k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blink-chat
  labels:
    name: blink-chat
    app: blink-chat
